syntax = "proto3";

package key;

message AddKeyRequest {
    string key_name = 1;
    string chain_id = 2;
}

message AddKeyResponse {
    string address = 1;
    string mnemonic = 2;
}

message DeleteKeyRequest {
    string key_name = 1;
    string chain_id = 2;
}

message DeleteKeyResponse {}

message ShowAddressRequest {
    string key_name = 1;
    string chain_id = 2;
}

message ShowAddressResponse {
    string address = 1;
}

message KeyExistRequest {
    string key_name = 1;
    string chain_id = 2;
}

message KeyExistResponse {
    bool exist = 1;
}

message AddressInfo {
    string key_name = 1;
    string address = 2;
}

message ListAddressesRequest {
    string chain_id = 1;
}

message ListAddressesResponse {
    repeated AddressInfo addresses = 1;
}

message KeyFromKeyOrAddressRequest {
    string chain_id = 1;
    string key_or_address = 2;
}

message KeyFromKeyOrAddressResponse {
    string key_name = 1;
}

message RestoreKeyRequest {
    string key_name = 1;
    string chain_id = 2;
    string mnemonic = 3;
}

message RestoreKeyResponse {
    string address = 1;
}

service KeyService {
    rpc AddKey(AddKeyRequest) returns (AddKeyResponse) {};
    rpc ShowAddress(ShowAddressRequest) returns (ShowAddressResponse) {};
    rpc DeleteKey(DeleteKeyRequest) returns (DeleteKeyResponse) {};
    rpc KeyExist(KeyExistRequest) returns (KeyExistResponse) {};
    rpc ListAddresses(ListAddressesRequest) returns (ListAddressesResponse) {};
    rpc KeyFromKeyOrAddress(KeyFromKeyOrAddressRequest) returns (KeyFromKeyOrAddressResponse) {};
    rpc RestoreKey(RestoreKeyRequest) returns (RestoreKeyResponse) {};
}